--- a/styles/year.css
+++ b/styles/year.css
@@ -2,7 +2,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
-
 .banner {
     background-image: url('../images/Banner\ Image.png');
     width: 1320px;
@@ -11,9 +10,7 @@ body {
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-
 }
-
 .banner-title1 {
     color: #FFF;
     text-align: center;
@@ -21,7 +18,6 @@ body {
     font-weight: 400;
     padding-top: 177px;
 }
-
 .banner-title2 {
     color: #FFF;
     text-align: center;
@@ -30,25 +26,46 @@ body {
     font-style: normal;
     font-weight: 900;
 }
-
 .header-2 {
     text-align: center;
 }
-
+/* 2nd banner related styles */
+.poster{
+    display: flex;
+    text-align: center;
+    background-image: url('../images/Vectorrr.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: 180px;    
+}
+.welcome{
+    color: #FFF; 
+    text-align: left;
+    margin-top: 50px;
+    margin-left: 350px;
+}
+.dolor{
+    color: #FFF;
+    margin-left: 350px;
+    text-align: left;
+}
+.join{
+     color: #FFF; 
+    text-align: left;
+    margin-top: 40px;
+    margin-left:380px;
+}
 .off {
     color: #F00;
     font-size: 88px;
     font-weight: 700;
 }
-
 .holiday {
     color: #F00;
     font-size: 24px;
     font-weight: 500;
-    /* margin-top: 48px;
-padding-top: 48px; */
+    
 }
-
 .categories {
     color: #070211;
     font-size: 48px;
@@ -56,20 +73,17 @@ padding-top: 48px; */
     margin-top: 0%;
     padding-top: 0%;
 }
-
 .happy-image {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
 }
-
 .main-image {
     width: 54px;
     height: 66px;
     flex-shrink: 0;
 }
-
 /* details poster related styles */
 .details {
     text-align: center;
@@ -83,11 +97,9 @@ padding-top: 48px; */
     margin-top: 20px;
     padding-top: 160px;
 }
-
 .pl1 {
     color: #F00;
 }
-
 .join-now {
     margin-top: 10px;
     padding: 10px;
@@ -96,7 +108,6 @@ padding-top: 48px; */
     background-color: red;
     color: white;
 }
-
 .offer {
     display: flex;
     text-align: center;
@@ -104,7 +115,6 @@ padding-top: 48px; */
     margin-left: 425px;
     margin-top: 100px;
 }
-
 .new {
     float: left;
     text-align: left;
