--- a/styles/year.css
+++ b/styles/year.css
@@ -12,6 +12,8 @@ body {
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
+    flex-shrink: 0;
+
 }
 
 .banner-title1 {
@@ -33,9 +35,11 @@ body {
 
 .header-2 {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-/* 2nd banner related styles */
+/*  banner related styles */
 .poster {
     display: flex;
     text-align: center;
@@ -43,6 +47,12 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 180px;
+}
+
+.hard-image {
+    float: right bottom;
+    width: 200px;
+    height: auto;
 }
 
 .welcome {
@@ -90,8 +100,6 @@ body {
     display: block;
     text-align: center;
     margin-left: 500px;
-    /* margin-left: auto;
-    margin-right: auto; */
     width: 50%;
 }
 
@@ -105,14 +113,23 @@ body {
 .details {
     text-align: center;
     background-color: #f1b3b3;
-    width: 1100px;
-    height: 300px;
+    width: 1320px;
+    height: 470px;
     flex-shrink: 0;
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
-    padding-top: 160px;
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
+
+.place,
+.date,
+.time {
+    font-weight: 600;
+    line-height: 56px;
+    text-align: center;
+    padding: 10px;
 }
 
 .pl1 {
@@ -128,12 +145,18 @@ body {
     color: white;
 }
 
+/* round image section related style */
 .offer {
+    background-color: #FFF;
     display: flex;
     text-align: center;
-    gap: 30px;
-    margin-left: 425px;
-    margin-top: 100px;
+    gap: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1320px;
+    height: 470px;
+    border-radius: 50px;
+
 }
 
 .new {
@@ -146,8 +169,9 @@ body {
 }
 
 .round-image {
-    border: 2px;
+    border: 5px solid red;
     border-radius: 50%;
+    padding: 10px;
 }
 
 .year {
@@ -167,12 +191,9 @@ body {
     color: #F00;
 }
 
-.section-title {
-    text-align: center;
-    margin-bottom: 0px;
-}
-
-.holiday-section {
+.section-title,
+.section-heading,
+.paragraph {
     text-align: center;
 }
 
@@ -185,7 +206,16 @@ body {
 
 /* gift section styles */
 .gift {
-    margin-left: 200px;
+    background-color: #FFF;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 1320px;
+    height: 470px;
+    border-radius: 50px;
+}
+.bt{
+    color: #F00;
 }
 
 .best-gift {
@@ -200,7 +230,7 @@ body {
 /* subscribe section style */
 .subscribe {
     text-align: center;
-    margin-top: 20px;
+    /* margin-top: 20px;
     width: 1100px;
     background: rgba(255, 0, 0, 0.05);
     height: 300px;
@@ -209,7 +239,19 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    padding-top: 160px;
+    padding-top: 160px; */
+
+    background: rgba(255, 0, 0, 0.05);
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 1320px;
+    height: 616px;
+    border-radius: 16px;
+    margin-top: 700px;
+}
+.p-color {
+    color: rgba(7, 2, 17, 0.60);
 }
 
 .subscribe-btn {
@@ -236,16 +278,19 @@ body {
     padding-top: 0px;
     margin-bottom: 0px;
 }
+
 .address {
     font-weight: 500;
-line-height: 40px;
+    line-height: 40px;
 }
+
 .social-links {
     text-align: center;
     background-color: #070211;
     padding-bottom: 20px;
     padding-top: 20px;
 }
+
 .footer-summery {
     display: flex;
     background-color: #070211;
@@ -255,13 +300,19 @@ line-height: 40px;
     margin: 0px 200px;
     padding-bottom: 20px;
 }
-.line{
+
+.line {
     width: 1320px;
-height: 1px;
-background-color:  rgba(255, 255, 255, 0.15);
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.15);
 }
 .ft-info {
     background-color: #070211;
+    width: 1600px;
+height: 609px;
+flex-shrink: 0;
+margin-left: auto;
+margin-right: auto;
 
-    
+
 }
