--- a/styles/year.css
+++ b/styles/year.css
@@ -48,11 +48,35 @@ body {
     background-position: center;
     margin-top: 180px;
 }
+.poster {       
+    width: 1320px;
+    height: 470px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;   
+}
+/* .text-on-image {
+    color: #070211;
+    text-align: left;
+    justify-content: left;
+    margin-left: 1000px;
+} */
 
 .hard-image {
-    float: right bottom;
+    /* float: right bottom;
     width: 200px;
-    height: auto;
+    height: auto; */
+    
+width: 319.83px;
+height: 464.662px;
+padding: 0.008px 0px 0px 850px;
+width: 300px;
+height: 464.662px;
+
+
+
+flex-shrink: 0;
+position: top right;
 }
 
 .welcome {
@@ -230,17 +254,7 @@ body {
 /* subscribe section style */
 .subscribe {
     text-align: center;
-    /* margin-top: 20px;
-    width: 1100px;
-    background: rgba(255, 0, 0, 0.05);
-    height: 300px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    padding-top: 160px; */
-
+    
     background: rgba(255, 0, 0, 0.05);
     margin-left: auto;
     margin-right: auto;
