poster updated again

--- a/styles/year.css
+++ b/styles/year.css
@@ -48,35 +48,48 @@ body {
     background-position: center;
     margin-top: 180px;
 }
-.poster {       
+
+.banner-content {
+    color: #FFF;
+    max-width: 500px;
+    text-align: left;
+    margin-top: 60px;
+    margin-left: 80px;
+}
+
+.banner-title {
+
+    font-size: 50px;
+    font-weight: 700px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+
+
+.poster {
     width: 1320px;
     height: 470px;
     border-radius: 10px;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto;
 }
-/* .text-on-image {
+
+.text-on-image {
     color: #070211;
     text-align: left;
     justify-content: left;
     margin-left: 1000px;
-} */
+}
 
 .hard-image {
-    /* float: right bottom;
-    width: 200px;
-    height: auto; */
-    
-width: 319.83px;
-height: 464.662px;
-padding: 0.008px 0px 0px 850px;
-width: 300px;
-height: 464.662px;
-
-
-
-flex-shrink: 0;
-position: top right;
+    width: 319.83px;
+    height: 464.662px;
+    padding: 0.008px 0px 0px 350px;
+    width: 300px;
+    height: 464.662px;
+    flex-shrink: 0;
+    position: top right;
 }
 
 .welcome {
@@ -238,7 +251,8 @@ position: top right;
     height: 470px;
     border-radius: 50px;
 }
-.bt{
+
+.bt {
     color: #F00;
 }
 
@@ -254,7 +268,7 @@ position: top right;
 /* subscribe section style */
 .subscribe {
     text-align: center;
-    
+
     background: rgba(255, 0, 0, 0.05);
     margin-left: auto;
     margin-right: auto;
@@ -264,6 +278,7 @@ position: top right;
     border-radius: 16px;
     margin-top: 700px;
 }
+
 .p-color {
     color: rgba(7, 2, 17, 0.60);
 }
@@ -320,13 +335,14 @@ position: top right;
     height: 1px;
     background-color: rgba(255, 255, 255, 0.15);
 }
+
 .ft-info {
     background-color: #070211;
     width: 1600px;
-height: 609px;
-flex-shrink: 0;
-margin-left: auto;
-margin-right: auto;
+    height: 609px;
+    flex-shrink: 0;
+    margin-left: auto;
+    margin-right: auto;
 
 
 }
