--- a/styles/year.css
+++ b/styles/year.css
@@ -220,26 +220,64 @@ body {
 }
 
 /* holiday sale section */
+
+.holiday-image {
+    background-image: url('../images/Rectangle 2.png');
+    background-repeat: no-repeat;
+    position: bottom left;
+    width: 1600px;
+height: 0px;
+background-color: #FFF;
+    
+}
+
+.all-images {
+    border: #FFF;
+    margin: 50px auto;
+    background-image: url('../images/Rectangle\ 2.png');
+    background-repeat: no-repeat;
+    position: bottom left;
+   
+}
+.girl{
+  position: relative;
+  top: 990px;
+  left: 450px;
+}
+.box{
+position: relative;
+top: 500px;
+right: 400px;
+}
+.discount{
+    position: relative;
+    bottom: 10px;
+    left: 200px;
+
+}
 .xxx {
     text-align: center;
+}
+
+.holiday section {
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+
 }
 
 #red {
     color: #F00;
 }
 
-.section-title,
-.section-heading,
-.paragraph {
+.container {
     text-align: center;
+
 }
 
-.holiday-image {
-    background-image: url('../images/Rectangle\ 2.png'), url('../images/Rectangle\ 1.png');
-    background-repeat: no-repeat;
-    background-position: bottom, top right;
-    margin-right: 400px;
-}
+
+
+
 
 /* gift section styles */
 .gift {
